# HuihuNetFucker

./: CMakeLists.txt  HuihuBashCurl.sh  HuihuBashWget.sh  README.md  compile_commands.json
include/: HuihuFucker.hpp  workspaceConfig.hpp
src/: HuihuFucker.cc  main.cc
